@@ -7,5 +7,6 @@ SOURCE service_has_role.sql
 SOURCE role.sql
 SOURCE role_has_operation.sql
 SOURCE assignment_note.sql
+SOURCE participant.sql
 
 COMMIT;
